updated css and index

--- a/sidebar-navigation-sanskrit-literature.html
+++ b/sidebar-navigation-sanskrit-literature.html
@@ -16,7 +16,7 @@
     </li>
     <li>
         <a href="#foodSubmenu" data-toggle="collapse" aria-expanded="false">
-            <span class="bullet" style="margin-right: 5px;">▼ /food</span>
+            <span class="bullet" style="margin-right: 5px;">▼</span>
             <span style="margin:5px; font:12px;">/food</span>
         </a>
         <ul class="collapse list-unstyled" id="foodSubmenu">
@@ -33,7 +33,7 @@
     </li>
 
     <li>
-        <a href="#graphicsSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+        <a href="#graphicsSubmenu" data-toggle="collapse" aria-expanded="false">
             <span class="bullet" style="margin-right: 5px;">▼</span>
             <span style="margin:5px; font:12px;">/graphics</span>
         </a>
@@ -71,7 +71,7 @@
         </a>
     </li>
     <li>
-        <a href="#learningSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+        <a href="#learningSubmenu" data-toggle="collapse" aria-expanded="false">
             <span class="bullet" style="margin-right: 5px;">▼</span>
             <span style="margin:5px; font:12px;">/learning</span>
         </a>
@@ -87,7 +87,7 @@
     <li>
         <a href="pixel-avatar-generator.html">
             <span class="bullet">►</span>
-            <span style="margin:5px; font:12px;">/pixel-avatar-generator</span>
+            <span style="margin:5px; font:12px;">/avatar-generator</span>
         </a>
     </li>
 
