--- a/sidebar.html
+++ b/sidebar.html
@@ -1,10 +1,10 @@
 <div class="sidebar-header container" id="sidebar-header" style="text-align:center;">
 </div>
 
-<ul class="list-unstyled components">
+<ul class="list-unstyled components" style="padding-left: 20px;">
     <li>
         <a href="index.html">
-            <span class="bullet">►</span>
+            <span class="bullet">○</span>
             <span style="margin:2px; font:12px;">/home</span>
         </a>
     </li>
@@ -27,7 +27,7 @@
     </li>
     <li>
         <a href="index.html">
-            <span class="bullet">►</span>
+            <span class="bullet">○</span>
             <span style="margin:2px; font:12px;">/portfolio</span>
         </a>
     </li>
@@ -48,25 +48,25 @@
     </li>
     <li>
         <a href="resume.html">
-            <span class="bullet">►</span>
+            <span class="bullet">○</span>
             <span style="margin:5px; font:12px;">/resume</span>
         </a>
     </li>
     <li>
         <a href="blogs.html">
-            <span class="bullet">►</span>
+            <span class="bullet">○</span>
             <span style="margin:5px; font:12px;">/blogs</span>
         </a>
     </li>
     <li>
         <a href="random-photos.html">
-            <span class="bullet">►</span>
+            <span class="bullet">○</span>
             <span style="margin:5px; font:12px;">/random-photos</span>
         </a>
     </li>
     <li>
         <a href="fonts.html">
-            <span class="bullet">►</span>
+            <span class="bullet">○</span>
             <span style="margin:5px; font:12px;">/fonts</span>
         </a>
     </li>
@@ -86,7 +86,7 @@
     </li>
     <li>
         <a href="pixel-avatar-generator.html">
-            <span class="bullet">►</span>
+            <span class="bullet">○</span>
             <span style="margin:5px; font:12px;">/avatar-generator</span>
         </a>
     </li>
