--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="pistaHeader"></div>
     </div>
     <div class="row">
-        <h5 style="padding-right: 30px; padding-top: 10px; color: white; width: 100%; text-align: right;" >Wallpapers by cigi10</h5>
+        <h5 style="padding-right: 30px; padding-top: 10px; color: white; width: 100%; text-align: right;" >Wallpapers by cigi10</h5><br>
     </div> 
     <div class="row">
         <div class="col-xs-12 col-md-6 col-lg-2">
