--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" href="logo.svg" type="image/svg+xml">
+    <link rel="icon" href="assets/images/logo.svg" type="image/svg+xml">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,9 @@
 
 <body>
     <div class="row">
-        <div id="pistaHeader"></div>
+        <div id="pistaHeader">
+            <img src="assets/images/indexpage_header_image.jpeg" alt="Header Image" />
+        </div>
     </div>
     <div class="row">
     </div> 
