--- a/sidebar.html
+++ b/sidebar.html
@@ -58,7 +58,7 @@
             <li><a href="transparent-pngs.html"><span>↳</span>/transparent-pngs</a></li>
             <li><a href="icons.html"><span>↳</span>/icons</a></li>
             <li><a href="pfps.html"><span>↳</span>/pfps</a></li>
-            <li><a href="banners-wallpapers.html"><span>↳</span>/banners-wallpapers</a></li>
+            <li><a href="wallpapers.html"><span>↳</span>/wallpapers</a></li>
             <li><a href="stickers.html"><span>↳</span>/stickers</a></li>
         </ul>
     </li>
