--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,10 @@
         <div id="pistaHeader">
             <img src="assets/images/indexpage_header_image.jpeg" alt="Header Image" />
         </div>
+        
+        <div class="pin-container">
+            <img src="assets/logo.svg" class="pin-icon" alt="Logo Icon">
+        </div>
     </div>
     <div class="row">
     </div> 
