--- a/wallpapers.html
+++ b/wallpapers.html
@@ -26,6 +26,10 @@
                 <img src="assets/images/indexpage_header_image.jpeg" alt="Header Image" />
             </div>
         </div>
+
+        <div class="pin-container">
+            <img src="assets/logo.svg" class="pin-icon" alt="Logo Icon">
+        </div>
     
         <div class="row">
             <h5 style="padding-right: 30px; padding-top: 10px; color: #FFFBEF; width: 100%; text-align: right;">
