--- a/index.html
+++ b/index.html
@@ -20,11 +20,18 @@
 </head>
 
 <body>
+    
     <div class="row">
         <div id="pistaHeader">
             <img src="assets/images/indexpage_header_image.jpeg" alt="Header Image" />
         </div>
     </div>
+    
+        <!-- Pin Icon between the header and content -->
+    <div class="pin-container">
+        <img src="assets/logo.svg" class="pin-icon" alt="Logo Icon">
+    </div>
+
     <div class="row">
         <h5 style="padding-right: 30px; padding-top: 10px; color: #FFFBEF; width: 100%; text-align: right;" >About me</h5><br>
     </div> 
