break for about me

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <div class="col-xs-12 col-md-6 col-lg-10">
             <div class="about-me-box">
                 <h6>Hey, it's Chipra</h6>
-                <p>This is a brief description about me. <br> 
-                I'm passionate about art, design and learning new things about web dev and electronics.</p>
+                <p>This is a brief description <br> about me. <br> 
+                I'm passionate about art, <br>design and learning new <br>things about web dev and <br>electronics.</p>
             </div>
         </div>
     </div>
