--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     
     <div class="row">
-        <div id="pistaHeader">
+        <div id="pistaHeader" style="width: 100%;">
             <img src="assets/images/indexpage_header_image.jpeg" alt="Header Image" />
         </div>
     </div>
@@ -54,7 +54,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 id="modalHeader"></h5>
-                    <span class="close">&times;</span>
+                    <span class="close" data-bs-dismiss="modal">&times;</span>
                 </div>
                 <div class="modal-body">
                     <div class="row">
