--- a/sidebar.html
+++ b/sidebar.html
@@ -18,30 +18,15 @@
                 </span>
         </a>
     </li>
+
     <li>
-        
-            <span class="bullet" style="margin-right: 5px;">▼</span>
-            <span style="margin:5px; font:12px;">
-                <a href="#foodSubmenu" data-toggle="collapse" aria-expanded="false">
-                /food
+        <span class="bullet">○</span>
+        <span style="margin:2px; font:12px;">
+            <a href="food-pics.html">/food-pics
             </a>
             </span>
-        </a>
-        <ul class="collapse list-unstyled" id="foodSubmenu">
-            <li><a href="reviews.html"><span>↳</span>/reviews</a></li>
-            <li><a href="food-pics.html"><span>↳</span>/food-pics</a></li>
-        </ul>
-    </li>
-    </li>
-    <li>
-            <span class="bullet">○</span>
-            <span style="margin:2px; font:12px;">
-                <a href="index.html">
-                /portfolio
-            </a> 
-        </span>
-        </a>
-    </li>
+    </a>
+</li>
 
     <li>
             <span class="bullet" style="margin-right: 5px;">▼</span>
@@ -53,20 +38,7 @@
         </a>
         <ul class="collapse list-unstyled" id="graphicsSubmenu">
             <li><a href="illustrations.html"><span>↳</span>/illustrations</a></li>
-            <li><a href="transparent-pngs.html"><span>↳</span>/transparent-pngs</a></li>
-            <li><a href="icons.html"><span>↳</span>/icons</a></li>
-            <li><a href="pfps.html"><span>↳</span>/pfps</a></li>
             <li><a href="wallpapers.html"><span>↳</span>/wallpapers</a></li>
-            <li><a href="stickers.html"><span>↳</span>/stickers</a></li>
         </ul>
     </li>
-    <li>
-            <span class="bullet">○</span>
-            <span style="margin:5px; font:12px;">   <a href="random-photos.html"> 
-                /random-photos
-            </a></span>
-        </a>
-    </li>
 </ul>
-
-
