--- a/illustrations.html
+++ b/illustrations.html
@@ -121,6 +121,9 @@
     
                     <div class="col-sm card3">
                         <img src="assets/images/art_portfolio/alien_girl.png" alt="alien_girl" id="image_43" onclick="showDownloadPopup(this);" />
+                        <div class="logo-overlay">
+                            <img src="assets/logo.svg" alt="Logo" />
+                        </div>
                         <h5 class="card-title"><a href="image-download.html"></a></h5>
                     </div>
                 </div>
