--- a/illustrations.html
+++ b/illustrations.html
@@ -120,10 +120,8 @@
                     </div>
     
                     <div class="col-sm card3">
-                        <img src="assets/images/art_portfolio/alien_girl.png" alt="alien_girl" id="image_43" onclick="showDownloadPopup(this);" />
-                        <div class="logo-overlay">
-                            <img src="assets/logo.svg" alt="Logo" />
-                        </div>
+                        <img src="assets/images/art_portfolio/alien_girl.png" alt="alien_girl" id="image_43" onclick="showDownloadPopup(this);" class="main-image" />
+                        <img src="assets/logo.svg" alt="logo" class="logo-overlay" />
                         <h5 class="card-title"><a href="image-download.html"></a></h5>
                     </div>
                 </div>
